--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,9 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+
+thomas:
+  first_name: 'thomas'
+  last_name: 'jefferson'
+  email: 'montecello@example.com'
+  encrypted_password: = Devise::Encryptor.digest(User, 'foobar')
