--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  content: MyString
-  user_id: 
-  post_id: 
+first_comment:
+  content: Lorem ipsum Sunt irure nulla quis.
+  user_id: 1
+  post_id: 1
 
-two:
-  content: MyString
-  user_id: 
-  post_id: 
